--- a/src/app.pcss
+++ b/src/app.pcss
@@ -4,10 +4,12 @@
 
 @layer base {
   :root {
+    --sidebar-element: rgb(0 0 0 / 60%);
     --primary: #2f3337;
     --background: #ffffff;
-    --secondary: #f1f2f5;
+    --secondary: #eff4ed;
     --tertiary: #919aa3;
+    --gray-background: #4a4a4a99;
 
     --foreground: #303438;
     --foreground-invert: #ffffff;
@@ -21,16 +23,17 @@
     --seperator: #e4e3e8;
 
     --window-outline: #e4e3e8;
+    --card-window-outline: #eff4ed;
 
-    --browser-window-dots: #e4e3e8;
+    --browser-window-dots: #4a4a4a99;
     --browser-window-search: #f7f8fa;
     --browser-window-ribbon: #ffffff;
     --browser-window-foreground: #303438;
     --browser-window-background: #f7f8fa;
 
-    --terminal-window-dots: #e4e3e8;
+    --terminal-window-dots: #4a4a4a99;
     --terminal-window-ribbon: #ffffff;
-    --terminal-window-background: #f7f8fa;
+    --terminal-window-background: #eff4ed;
     --terminal-window-foreground: #313336;
 
     --slider-empty: #9ca3ab;
@@ -45,6 +48,7 @@
     --background: #1d1f21;
     --secondary: #2f3337;
     --tertiary: #81878c;
+    --sidebar: green;
 
     --foreground: #dcdcdc;
     --foreground-invert: #1d1f21;
